@@ -290,6 +290,7 @@ ibis::table* ibis::filter::filt(const ibis::selectClause &tms,
 		<< mesg << " -- select clause (" << tms
 		<< ") contains variables that are not in data partition "
 		<< (*it)->name();
+	    ierr = -11;
 	    continue;
 	}
 	ierr = qq.setSelectClause(&tms);
@@ -298,6 +299,7 @@ ibis::table* ibis::filter::filt(const ibis::selectClause &tms,
 		<< mesg << " -- failed to modify the select clause of "
 		<< "the countQuery object (" << qq.getWhereClause()
 		<< ") on data partition " << (*it)->name();
+	    ierr = -12;
 	    continue;
 	}
 
@@ -306,6 +308,7 @@ ibis::table* ibis::filter::filt(const ibis::selectClause &tms,
 	    LOGGER(ibis::gVerbose > 1)
 		<< mesg << " -- query.setPartition(" << (*it)->name()
 		<< ") failed with error code " << ierr;
+	    ierr = -13;
 	    continue;
 	}
 
@@ -314,6 +317,7 @@ ibis::table* ibis::filter::filt(const ibis::selectClause &tms,
 	    LOGGER(ibis::gVerbose > 1)
 		<< mesg << " -- failed to process query on data partition "
 		<< (*it)->name();
+	    ierr = -14;
 	    continue;
 	}
 
@@ -329,6 +333,7 @@ ibis::table* ibis::filter::filt(const ibis::selectClause &tms,
 		    LOGGER(ibis::gVerbose > 1)
 			<< mesg << " -- can not handle a math::term "
 			"of undefined type";
+		    ierr = -15;
 		}
 		else {
 		    if (tls[i] == ibis::UNKNOWN_TYPE)
@@ -348,6 +353,7 @@ ibis::table* ibis::filter::filt(const ibis::selectClause &tms,
 		LOGGER(ibis::gVerbose > 1)
 		    << mesg << " -- \"" << tms.argName(itm)
 		    << "\" is not a column of partition " << (*it)->name();
+		ierr = -16;
 		continue;
 	    }
 
@@ -472,6 +478,7 @@ ibis::table* ibis::filter::filt(const ibis::selectClause &tms,
 		LOGGER(ibis::gVerbose > 1)
 		    << mesg << " -- unable to process column " << tms[itm]
 		    << " (type " << ibis::TYPESTRING[(int)tls[i]] << ")";
+		ierr = -17;
 		break;}
 	    }
 	}
@@ -479,8 +486,16 @@ ibis::table* ibis::filter::filt(const ibis::selectClause &tms,
     }
 
     std::string tn = ibis::util::shortName(mesg);
-    if (nh == 0) { // return an empty table of type tabula
-	return new ibis::tabula(tn.c_str(), mesg.c_str(), nh);
+    if (nh == 0) {
+	if (ierr >= 0) { // return an empty table of type tabula
+	    return new ibis::tabula(tn.c_str(), mesg.c_str(), nh);
+	}
+	else {
+	    LOGGER(ibis::gVerbose > 0)
+		<< "Warning -- " << mesg << " failed to produce any result "
+		"due to error, last error code was " << ierr;
+	    return 0;
+	}
     }
     else if (tmstouse.empty()) { // count(*)
 	return new ibis::tabele(tn.c_str(), mesg.c_str(), nh, tms.termName(0));
