@@ -1,3 +1,14 @@
+2010-08-26 John Wu <John dot Wu at ACM dot org>
+	* src/mensa.cpp, src/filter.cpp: return a nil pointer from
+	table::select and filter::filt if the select clause is incorrect
+	from all data partitions (as suggested by Jan Steemann)
+
+2010-08-24 John Wu <John dot Wu at ACM dot org>
+	* src/twister.h: clean up doxygen document of the random number
+	generators, move continuous random number generators out of
+	Mersenne Twister, change all pointers to uniformRandomNumber to
+	references
+
 2010-08-23 John Wu <John dot Wu at ACM dot org>
 	* src/colValues.cpp:548 change the function swap to operator =,
 	using swap causes the new bundle to take over the existing string
